--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "body-parser": "1.18.2",
     "dotenv": "4.0.0",
     "express": "4.16.2",
+    "fluent-logger": "2.6.1",
     "jsonwebtoken": "8.1.0",
     "mysql2": "1.5.0",
     "sequelize": "4.22.7"
