--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "eslint": "eslint index.js src/*",
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "eslint": "eslint index.js src/*"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -24,7 +24,8 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
     "eslint-plugin-promise": "3.6.0",
-    "eslint-plugin-standard": "3.0.1"
+    "eslint-plugin-standard": "3.0.1",
+    "mocha": "5.0.4"
   },
   "dependencies": {
     "body-parser": "1.18.2",
