--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hinemos_api",
-  "version": "0.5.0",
+  "version": "0.5.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -20,19 +20,19 @@
   "homepage": "https://github.com/sakabar/hinemos_api#readme",
   "devDependencies": {
     "eslint": "^4.19.1",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.7.0",
     "eslint-plugin-standard": "^3.0.1",
-    "mocha": "^5.1.0"
+    "mocha": "^5.1.1"
   },
   "dependencies": {
     "body-parser": "1.18.2",
-    "dotenv": "4.0.0",
+    "dotenv": "^5.0.1",
     "express": "4.16.2",
-    "fluent-logger": "2.6.1",
-    "jsonwebtoken": "8.1.0",
+    "fluent-logger": "^2.6.2",
+    "jsonwebtoken": "^8.2.1",
     "mysql2": "1.5.0",
     "sequelize": "4.22.7"
   }
