--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "express": "4.16.2",
     "fluent-logger": "^2.6.2",
     "jsonwebtoken": "^8.2.1",
+    "mathjs": "^4.2.1",
     "mysql2": "1.5.0",
     "sequelize": "4.22.7"
   }
