--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hinemos_api",
-  "version": "0.7.0",
+  "version": "0.7.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,20 +21,20 @@
   "devDependencies": {
     "eslint": "^4.19.1",
     "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "mocha": "^5.1.1"
+    "mocha": "^5.2.0"
   },
   "dependencies": {
-    "body-parser": "1.18.2",
-    "dotenv": "^5.0.1",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "4.16.2",
     "fluent-logger": "^2.7.0",
-    "jsonwebtoken": "^8.2.1",
-    "mathjs": "^4.2.2",
-    "mysql2": "1.5.0",
+    "jsonwebtoken": "^8.3.0",
+    "mathjs": "^4.4.2",
+    "mysql2": "^1.5.3",
     "sequelize": "4.22.7"
   }
 }
