--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fluent-logger": "^2.7.0",
     "jsonwebtoken": "^8.3.0",
     "mathjs": "^5.0.0",
+    "moment": "^2.22.2",
     "mysql2": "^1.5.3",
     "sequelize": "4.22.7"
   }
