--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "4.16.2",
     "fluent-logger": "^2.8.0",
     "jsonwebtoken": "^8.3.0",
+    "lodash": "^4.17.11",
     "mathjs": "^5.0.4",
     "moment": "^2.22.2",
     "mysql2": "^1.6.1",
