--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "sinon": "^8.0.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
     "dotenv": "^6.2.0",
     "express": "4.16.2",
+    "express-validator": "^6.3.0",
     "fluent-logger": "^2.8.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
