--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cuberyl": "0.0.4",
     "dotenv": "^6.2.0",
     "express": "4.16.2",
     "express-validator": "^6.3.1",
